--- a/index.html
+++ b/index.html
@@ -20,41 +20,41 @@
     <main>
       <!------- section 4 ------->
 
-      <section class="section-four">
-        <div class="container">
-          <h2 class="title-section-portfolio">Our Portfolio</h2>
-          <ul class="portfolio-list">
-            <li class="portfolio-box">
-              <div class="portfolio-img">
+      <section class="collection">
+        <div class="container collection-container">
+          <h2 class="title-section-collection">Our Collection</h2>
+          <ul class="collection-card">
+            <li class="collection-box">
+              <div class="collection-img">
                 <picture>
                   <source
-                    srcset="./images/img1xs31.jpg 1x, ./images/img2xs31.jpg 2x"
-                    media="min-width: 1158px"
+                    srcset="./images/img61desk.jpg 1x, ./images/img61desk2x.jpg 2x"
+                    media="min-width:1158 px"
                   />
                   <source
-                    srcset="./images/img1xs31.jpg 1x, ./images/img2xs31.jpg 2x"
+                    srcset="./images/img61tab.jpg 1x, ./images/img61tab 2x.jpg 2x"
                     media="min-width: 768px"
                   />
                   <source
-                    srcset="./images/img1xs31.jpg 1x, ./images/img2xs31.jpg 2x"
+                    srcset="./images/img61.jpg 1x, ./images/img612x.jpg 2x"
                     media="min-width: 320px"
                   />
                   <img
-                    src="./images/img11.jpg"
-                    alt="banking app"
+                    src="./images/img61.jpg"
+                    alt="AUGUST Poltava women's blouseRING"
                     width="360"
                     height="300"
                   />
                 </picture>
 
                 <p class="hover-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus, inventore!
+                   
+                  
                 </p>
               </div>
-              <div class="port-lio-list">
-                <h3 class="portfolio-title">Banking App</h3>
+              <div class="collection-list">
+                <h3 class="collection-title">Banking App</h3>
                 <p class="text">App</p>
               </div>
             </li>
