--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
               <div class="collection-img">
                 <picture>
                   <source
-                    srcset="./images/img61desk.jpg 1x, ./images/img61desk2x.jpg 2x"
+                    srcset="
+                      ./images/img61desk.jpg   1x,
+                      ./images/img61desk2x.jpg 2x
+                    "
                     media="min-width:1158 px"
                   />
                   <source
@@ -48,186 +51,211 @@
                 </picture>
 
                 <p class="hover-text">
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus, inventore!
-                   
-                  
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Minus, inventore!
                 </p>
               </div>
               <div class="collection-list">
-                <h3 class="collection-title">Banking App</h3>
-                <p class="text">App</p>
+                <h3 class="collection-title">vyshyvanka</h3>
+                <p class="text">3000</p>
               </div>
             </li>
 
-            <li class="portfolio-box">
-              <div class="portfolio-img">
+            <li class="collection-box">
+              <div class="collection-img">
                 <picture>
                   <source
-                    srcset="./images/img1x32.jpg 1x, ./images/img2x32.jpg 2x"
-                    media="min-width:768px"
-                  />
-                  <source
-                    srcset="./images/img1x32.jpg 1x, ./images/img2x32.jpg 2x"
+                    srcset="
+                      ./images/img62desk.jpg   1x,
+                      ./images/img62desk2x.jpg 2x
+                    "
                     media="min-width:1158px"
                   />
                   <source
-                    srcset="./images/img1x32.jpg 1x, ./images/img2x32.jpg 2x"
+                    srcset="
+                      ./images/img62tab.jpg   1x,
+                      ./images/img62tab2x.jpg 2x
+                    "
+                    media="min-width:768px"
+                  />
+                  <source
+                    srcset="./images/img62.jpg 1x, ./images/img622x.jpg 2x"
                     media="min-width:320px"
                   />
 
                   <img
-                    src="./images/img12.jpg"
+                    src="./images/img62.jpg"
                     alt="cashless payment"
                     width="360"
                     height="300"
                   />
                 </picture>
                 <p class="hover-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Dolore, sunt!
                 </p>
               </div>
-              <div class="port-lio-list">
-                <h3 class="portfolio-title">Cashless Payment</h3>
-                <p class="text">Marketing</p>
+              <div class="collection-list">
+                <h3 class="collection-title">vyshyvanka2</h3>
+                <p class="text">3000</p>
               </div>
             </li>
 
-            <li class="portfolio-box">
-              <div class="portfolio-img">
+            <li class="collection-box">
+              <div class="collection-img">
                 <picture>
                   <source
-                    srcset="./images/img1x33.jpg 1x, ./images/img2x33.jpg 2x"
+                    srcset="
+                      ./images/img63desk.jpg   1x,
+                      ./images/img63desk2x.jpg 2x
+                    "
                     media="min-width:1158px"
                   />
                   <source
-                    srcset="./images/img1x33.jpg 1x, ./images/img2x33.jpg 2x"
+                    srcset="
+                      ./images/img63tab.jpg   1x,
+                      ./images/img63tab2x.jpg 2x
+                    "
                     media="min-width:768px"
                   />
                   <source
-                    srcset="./images/img1x33.jpg 1x, ./images/img2x33.jpg 2x"
+                    srcset="./images/img63.jpg 1x, ./images/img632x.jpg 2x"
                     media="min-width:320px"
                   />
                   <img
-                    src="./images/img13.jpg"
+                    src="./images/img63.jpg"
                     alt="meditation app"
                     width="360"
                     height="300"
                   />
                 </picture>
                 <p class="hover-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Inventore, cupiditate. Lorem ipsum dolor sit amet consectetur
                 </p>
               </div>
-              <div class="port-lio-list">
-                <h3 class="portfolio-title">Meditation App</h3>
-                <p class="text">App</p>
+              <div class="collection-list">
+                <h3 class="collection-title">vyshyvanka</h3>
+                <p class="text">3000</p>
               </div>
             </li>
 
-            <li class="portfolio-box">
-              <div class="portfolio-img">
+            <li class="collection-box">
+              <div class="collection-img">
                 <picture>
                   <source
-                    srcset="./images/img1x34.jpg 1x, ./images/img2x34.jpg 2x"
+                    srcset="
+                      ./images/img64desk.jpg   1x,
+                      ./images/img64desk2x.jpg 2x
+                    "
                     media="min-width:1158px"
                   />
                   <source
-                    srcset="./images/img1x34.jpg 1x, ./images/img2x34.jpg 2x"
+                    srcset="
+                      ./images/img64tab.jpg   1x,
+                      ./images/img64tab2x.jpg 2x
+                    "
                     media="min-width:768px"
                   />
                   <source
-                    srcset="./images/img1x34.jpg 1x, ./images/img2x34.jpg 2x"
+                    srcset="./images/img64.jpg 1x, ./images/img642x.jpg 2x"
                     media="min-width:320px"
                   />
                   <img
-                    src="./images/img14.jpg"
+                    src="./images/img64.jpg"
                     alt="taxi service"
                     width="360"
                     height="300"
                   />
                 </picture>
                 <p class="hover-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Praesentium, unde.
                 </p>
               </div>
-              <div class="port-lio-list">
-                <h3 class="portfolio-title">Taxi Service</h3>
-                <p class="text">Marketing</p>
+              <div class="collection-list">
+                <h3 class="collection-title"></h3>
+                vyshyvanka
+                <p class="text">3000</p>
               </div>
             </li>
 
-            <li class="portfolio-box">
-              <div class="portfolio-img">
+            <li class="collection-box">
+              <div class="collection-img">
                 <picture>
                   <source
-                    srcset="./images/img1x35.jpg 1x, ./images/img2x35.jpg 2x"
+                    srcset="
+                      ./images/img65desk.jpg   1x,
+                      ./images/img65desk2x.jpg 2x
+                    "
                     media="min-width:1158px"
                   />
                   <source
-                    srcset="./images/img1x35.jpg 1x, ./images/img2x35.jpg 2x"
+                    srcset="
+                      ./images/img65tab.jpg   1x,
+                      ./images/img65tab2x.jpg 2x
+                    "
                     media="min-width:768px"
                   />
                   <source
-                    srcset="./images/img1x35.jpg 1x, ./images/img2x35.jpg 2x"
+                    srcset="./images/img65.jpg 1x, ./images/img652x.jpg 2x"
                     media="min-width:320px"
                   />
                   <img
-                    src="./images/img15.jpg"
+                    src="./images/img65.jpg"
                     alt="screen illustration"
                     width="360"
                     height="300"
                   />
                 </picture>
                 <p class="hover-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                  Libero, odit!
                 </p>
               </div>
-              <div class="port-lio-list">
-                <h3 class="portfolio-title">Screen Illustrations</h3>
-                <p class="text">Design</p>
+              <div class="collection-list">
+                <h3 class="collection-title">vyshyvanka</h3>
+                <p class="text">3000</p>
               </div>
             </li>
 
-            <li class="portfolio-box">
-              <div class="portfolio-img">
+            <li class="collection-box">
+              <div class="collection-img">
                 <picture>
                   <source
-                    srcset="./images/img1x36.jpg 1x, ./images/img2x36.jpg 2x"
+                    srcset="
+                      ./images/img66desk.jpg   1x,
+                      ./images/img66desk2x.jpg 2x
+                    "
                     media="min-width:1158px"
                   />
                   <source
-                    srcset="./images/img1x36.jpg 1x, ./images/img2x36.jpg 2x"
+                    srcset="
+                      ./images/img66tab.jpg   1x,
+                      ./images/img66tab2x.jpg 2x
+                    "
                     media="min-width:768px"
                   />
                   <source
-                    srcset="./images/img1x36.jpg 1x, ./images/img2x36.jpg 2x"
+                    srcset="./images/img66.jpg 1x, ./images/img662x.jpg 2x"
                     media="min-width:320px"
                   />
 
                   <img
-                    src="./images/img16.jpg"
+                    src="./images/img66.jpg"
                     alt="online courses"
                     width="360"
                     height="300"
                   />
                 </picture>
                 <p class="hover-text">
-                  14 Stylish and User-Friendly App Design Concepts · Task
-                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
-                  · Cloud Storage App
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Beatae, possimus!
                 </p>
               </div>
-              <div class="port-lio-list">
-                <h3 class="portfolio-title">Online Courses</h3>
-                <p class="text">Marketing</p>
+              <div class="collection-list">
+                <h3 class="collection-title">vyshyvanka</h3>
+                <p class="text">3000</p>
               </div>
             </li>
           </ul>
